methods.picture.PatternPicture.scala.error
Erreur de compilation :
PatternPicture:1: error: value gauche is not a member of Unit
override def run() {for(i<- 1 to 2 ){b(Color.red,Color.blue,Color.green,Color.yellow);avance (4);}gauche();avance(4);for(i<- 1 to 2 ){b(Color.red,Color.blue,Color.green,Color.yellow);avance (4);}
                                                                                                  ^